Fix issues with loading log4j classes
Signed-off-by: Simeon Widdis <sawiddis@amazon.com>