@@ -6,6 +6,9 @@ plugins {
     id 'com.diffplug.spotless' version '7.1.0'
 }
 
+import com.github.jengelman.gradle.plugins.shadow.transformers.Log4j2PluginsCacheFileTransformer
+import com.github.jengelman.gradle.plugins.shadow.transformers.ServiceFileTransformer
+
 java {
     toolchain {
         languageVersion = JavaLanguageVersion.of(21)
@@ -29,20 +32,13 @@ repositories {
 ext {
     // ALSO CHANGE sql_version.py's version
     // TODO: single source of truth
-    sqlPluginVersion = "3.4.0"
+    sqlPluginVersion = "3.3.0"
     opensearchClientVersion = '3.2.0'
-
-    jvmArgs = [
-        '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED',
-        '--add-opens=java.base/java.io=ALL-UNNAMED',
-        '--add-opens=java.base/sun.misc=ALL-UNNAMED'
-    ]
 }
 
 dependencies {
     // SQL deps
     implementation files('submodule/datasources-3.1.0.0-SNAPSHOT.jar')
-    implementation "org.opensearch.plugin:opensearch-sql-plugin:${project.ext.sqlPluginVersion}.0-SNAPSHOT"
     implementation "org.opensearch.query:unified-query-common:${project.ext.sqlPluginVersion}.0-SNAPSHOT"
     implementation "org.opensearch.query:unified-query-core:${project.ext.sqlPluginVersion}.0-SNAPSHOT"
     implementation "org.opensearch.query:unified-query-opensearch:${project.ext.sqlPluginVersion}.0-SNAPSHOT"
@@ -53,13 +49,6 @@ dependencies {
     implementation "org.opensearch.client:opensearch-rest-high-level-client:${opensearchClientVersion}"
     implementation "org.opensearch.client:opensearch-rest-client:${opensearchClientVersion}"
     implementation "org.opensearch.client:opensearch-java:${opensearchClientVersion}"
-    // Core deps
-    implementation 'org.apache.calcite:calcite-core:1.40.0'
-    implementation 'com.facebook.presto:presto-matching:0.293'
-    implementation 'org.antlr:antlr4-runtime:4.7.1'
-    implementation 'org.apache.commons:commons-lang3:3.18.0'
-    implementation 'org.reactivestreams:reactive-streams:1.0.4'
-    implementation 'com.google.guava:guava:32.4.8-jre'
     // AWS SDK v2
     implementation 'software.amazon.awssdk:sdk-core:2.31.63'
     implementation 'software.amazon.awssdk:auth:2.31.63'
@@ -117,11 +106,6 @@ test {
     useJUnitPlatform()
 }
 
-// Configure compile tasks for all source sets
-tasks.withType(JavaCompile).configureEach {
-    options.compilerArgs += project.ext.jvmArgs
-}
-
 spotless {
     java {
         target fileTree('.') {
@@ -142,18 +126,21 @@ spotless {
 
 shadowJar {
     archiveBaseName.set('opensearchsqlcli')
+    duplicatesStrategy = DuplicatesStrategy.FAIL
+    zip64 = true
 
     manifest {
         attributes 'Main-Class': 'Gateway'
+        attributes 'Multi-Release': 'true'
     }
 
-    exclude 'META-INF/*.SF'
-    exclude 'META-INF/*.DSA'
-    exclude 'META-INF/*.RSA'
-    exclude 'META-INF/*.EC'
-    exclude 'META-INF/MANIFEST.MF'
+    from(sourceSets.main.output)
+    configurations = [project.configurations.runtimeClasspath]
+
+    transform(Log4j2PluginsCacheFileTransformer)
+    transform(ServiceFileTransformer)
 
     mergeServiceFiles()
-    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
-    zip64 = true
+    mergeServiceFiles('META-INF/services/')
+    mergeServiceFiles('META-INF/spring/')
 }
